open port 80 on docker test

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ script:
   - ${PWD}/tests/test.sh
 
   - export ipaddr=$(docker inspect --format '{{ .NetworkSettings.IPAddress }}' $container_id)
-  - curl -sSf http://$ipaddr
+  - docker exec --tty ${container_id} curl -sSf http://$ipaddr
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
